x.y.z
=====

Release date:

New features:

* Implement individual delays for chord notes

Bug fixes:

Other:

1.2.1
=====

Release date:

Sun, 28 Dec 2025 14:00:44 +0200

Bug fixes:

* Fix chord automation applied only on pattern 0

* Fix column muting not stopping active notes by implementing granular active note tracking

* Fix muting a track not immediately stop playing notes in PlayerWorker

* Fix timing inaccuracy in PlayerWorker by sleeping until next tick

* Fix column mute stopping all notes on track

*  Remove related settings from SideChainService when a track gets deleted

*  Don't try to apply side-chain on a non-existing track

Other:

* Implement keyboard handling logic in C++

* Performance improvements
  - Optimize PlayerWorker to sleep until next event or line boundary

1.2.0
=====

Release date:

Fri, 19 Dec 2025 19:57:49 +0200

New features:

* Implement Chord Automation
  - Adds Column Settings with Chord Automation section

* Fix GitHub Issue #30: Implement MIDI side-chain feature

Bug fixes:

* Fix Send transport checkbox not initialized

Other:

* Improve audio I/O with a ring buffer

* Improve MIDI timing with direct function calls to worker

1.1.0
=====

Release date:

Wed, 03 Dec 2025 20:16:17 +0200

New features:

* Fix GitHub Issue #33: Implement sine modulation for MIDI CC automation

* Fix GitHub Issue #32: Implement virtual MIDI outs
  - Noteahead now opens "Noteahead Virtual MIDI OUT"
  - Tested with Surge XT that it actually works

* Take mute/solo into account when exporting as a MIDI file

* Introduce MidiExportDialog with start and end positions

1.0.0
=====

Release date:

Sat, 22 Nov 2025 13:50:42 +0200

New features:

* Fix GitHub Issue #13: Implement MIDI file export
  - Exports tempo track, note on/off, velocity

* Add percentage interpolation to velocity dialog

0.15.0
======

Release date:

Tue, 11 Nov 2025 19:07:20 +0200

New features:

* Fix GitHub Issue #29: Implement a pattern play order view