@@ -259,7 +259,7 @@ void Pattern::setTrackAtPosition(size_t position, TrackS track)
     m_trackOrder.at(position) = track;
 }
 
-void Pattern::addTrackToRightOf(size_t trackIndex)
+size_t Pattern::addTrackToRightOf(size_t trackIndex)
 {
     if (const auto track = trackPositionByIndex(trackIndex); track.has_value()) {
         juzzlin::L(TAG).debug() << "Add track to the right of track position " << *track;
@@ -267,8 +267,10 @@ void Pattern::addTrackToRightOf(size_t trackIndex)
         const auto newTrack = std::make_shared<Track>(newIndex, "Track " + std::to_string(newIndex + 1), m_trackOrder.at(0)->lineCount(), 1);
         m_trackOrder.insert(m_trackOrder.begin() + static_cast<long>(*track) + 1, newTrack);
         juzzlin::L(TAG).debug() << "Added track with index " << newIndex << ", new track count: " << m_trackOrder.size();
+        return newIndex;
     } else {
         juzzlin::L(TAG).error() << "Invalid track position: " << *track;
+        return 0; // Should not happen
     }
 }
 
