@@ -85,7 +85,7 @@ public:
 
     using TrackS = std::shared_ptr<Track>;
     void setTrackAtPosition(size_t position, TrackS track);
-    void addTrackToRightOf(size_t trackIndex);
+    size_t addTrackToRightOf(size_t trackIndex);
     void deleteTrack(size_t trackIndex);
 
     using InstrumentS = std::shared_ptr<Instrument>;
