@@ -11,6 +11,8 @@ Bug fixes:
 
 Other:
 
+* Optimize track creation
+
 1.2.1
 =====
 
